extensive bug squashing on the new sidebar functionality

--- a/cmn/MVP.css
+++ b/cmn/MVP.css
@@ -1336,7 +1336,7 @@ td.tranViewSelected {
 	float: right;
 	margin-left: 0;
 	width: 350px;
-    min-height: 500px;
+    min-height: 600px;
     border-left: 1px solid #E3E3E3;
 	transition: all 0.25s;
 	-moz-transition:all 0.25s; /* Firefox 4 */;
